# streamlit-s3-browser

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/common/: env.py  s3.py
src/configs/: __init__.py  env.py
src/connections/: pmongo.py
src/models/: base.py
